arreglo con la ia